--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5",
     "socket.io": "^3.0.5"
   }
 }
