--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /api/node_modules
 /api/package-lock.json
+/client/.eslintcache
+/api/config/db.config.js
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
@@ -25,5 +27,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/client/.eslintcache
-client/.eslintcache
