--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.1",
     "react-validation": "^3.0.7",
     "socket.io-client": "^3.0.5",
+    "uuid": "^8.3.2",
     "validator": "^13.5.2",
     "web-vitals": "^0.2.4"
   },
